# claude-agent

./: .gitignore  CLAUDE.md  pytest.ini  test_multi_turn.py
backend/: .gitignore  main.py  pyproject.toml  pytest.ini  test_conversations.py  test_followup.json  test_request.json
backend/storage/: __init__.py  base.py  file_storage.py
backend/tests/: README.md  __init__.py  conftest.py  test_api.py  test_config.py  test_e2e.py  test_helpers.py  test_live_e2e.py  test_models.py
docs/: README.md  api-compatibility.md  architecture.md  backend-implementation.md  claude-sdk-integration.md  deployment.md  frontend-implementation.md  querying-this-agent.md
frontend/: package.json
frontend/src/: App.css  App.tsx  index.css
